--- a/.github/workflows/main_expresso-api-novo.yml
+++ b/.github/workflows/main_expresso-api-novo.yml
@@ -19,10 +19,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Java version
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3  # Pode estar v1, v2 ou v3, deixe como está
         with:
           java-version: '17'
-          distribution: 'microsoft'
+          distribution: 'temurin' # Se não tiver essa linha, adicione
 
       - name: Build with Maven
         run: mvn clean install
@@ -60,4 +60,5 @@ jobs:
           app-name: 'expresso-api-novo'
           slot-name: 'Production'
           package: '*.jar'
+
           
